--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,64 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.sothree.slidinguppanel.SlidingUpPanelLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:sothree="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/sliding_layout"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="bottom"
-    sothree:umanoPanelHeight="100dp"
-    sothree:umanoShadowHeight="4dp"
-    sothree:umanoParallaxOffset="100dp"
-    sothree:umanoDragView="@+id/dragView"
-    sothree:umanoOverlay="true"
-    sothree:umanoScrollableView="@+id/list">
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
-    <!-- MAIN CONTENT -->
-    <LinearLayout
+
+    <pl.droidsonroids.gif.GifImageView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-            <pl.droidsonroids.gif.GifImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="end"
-                android:scaleType="centerCrop"
-                android:src="@drawable/windturbinesanimated"/>
-
-
-    </LinearLayout>
-
-    <!-- SLIDING LAYOUT -->
+        android:layout_height="0dp"
+        android:layout_gravity="end"
+        android:scaleType="centerCrop"
+        android:layout_weight="1"
+        android:src="@drawable/windturbinesanimated"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#ffffff"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:clickable="true"
-        android:focusable="false"
-        android:id="@+id/dragView">
+        android:background="#ffff0f"
+        android:focusable="false">
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="left"
-            android:textSize="30sp"
-            android:singleLine="true"
-            android:ellipsize="marquee"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:scrollHorizontally="true"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:freezesText="true"
-            android:fontFamily="monospace"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
-            android:text="All We Got (feat. Kanye West and The Chicago Children's Choir" />
+            android:ellipsize="marquee"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:fontFamily="@font/advent_pro"
+            android:freezesText="true"
+            android:gravity="left"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:scrollHorizontally="true"
+            android:singleLine="true"
+            android:text="All We Got (feat. Kanye West and The Chicago Children's Choir"
+            android:textColor="#000000"
+            android:textSize="30sp" />
 
         <TextView
             android:id="@+id/textView2"
@@ -76,7 +60,15 @@
             android:fontFamily="monospace"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
+            android:textColor="#000000"
             android:text="Chance the Rapper - Coloring Book" />
+
+        <SeekBar
+            android:id="@+id/seekBar"
+            android:layout_width="match_parent"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_height="wrap_content" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -130,11 +122,5 @@
                     app:srcCompat="@drawable/fast_forward" />
             </LinearLayout>
         </LinearLayout>
-        <ListView
-            android:id="@+id/list"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
-        </ListView>
     </LinearLayout>
-</com.sothree.slidinguppanel.SlidingUpPanelLayout>
+</LinearLayout>
